--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Development Notice -->
+    <div class="dev-notice">
+        Website in development
+    </div>
+
     <!-- Navigation -->
     <nav class="main-nav">
         <a href="index.html" class="nav-link active">Journey</a>
@@ -26,115 +31,159 @@
 
     <!-- Timeline Chapters -->
     <section class="timeline">
-        <!-- Chapter 1: Academic Achievements -->
+        <!-- Chapter 1: In the Beginning -->
         <div class="chapter">
             <div class="chapter-header">
-                <h2>Chapter 1: Academic Achievements</h2>
+                <h2>Chapter 1: In the Beginning</h2>
                 <button class="expand-btn">+</button>
             </div>
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <ul>
-                        <li><strong>Trinity College Dublin</strong> (2022 - 2026) - B.A. (Mod) Electronic & Computer Engineering, First Class Honours</li>
-                        <li><strong>Laidlaw Leadership Scholar</strong> - Selected for prestigious leadership development program</li>
-                        <li><strong>Academic Excellence</strong> - Consistent high performance across hardware design, signal processing, and AI/ML modules</li>
+                        <li><strong>Multicultural Roots</strong> - Grew up across multiple cities in India before moving to Ireland</li>
+                        <li><strong>Junior & Leaving Certificate</strong> - Achieved 613 points in my Leaving Certificate</li>
+                        <li><strong>Early Coding Journey</strong> - Started software development courses at age 13, building fun games and projects in Python and Java</li>
+                        <li><strong>First Hardware Project</strong> - Bought a cheap 3D printer with a friend from across the world, shipped to Ireland. Built a drone from scratch together</li>
+                        <li><strong>The Pivot</strong> - Initially thought I'd pursue mechanical engineering, but after building the drone, discovered my true passion lay in electronics</li>
                     </ul>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>University wasn't just about grades for me—it was where I discovered my passion for bridging hardware and software. Every late night debugging FPGA code taught me resilience. The Laidlaw scholarship showed me that technical skills mean little without the ability to lead and inspire others.</p>
+                    <p>Moving between cultures taught me to adapt and see problems from different perspectives. At 13, programming was just fun—I had no idea it would become my career. Building that drone was transformative. I loved the mechanical process, the hands-on building, but ultimately realized my heart was in making things think, not just move. Electronics was where hardware met intelligence, and that's where I found my calling.</p>
                 </div>
             </div>
         </div>
 
-        <!-- Chapter 2: Skills in Practice -->
+        <!-- Chapter 2: Found My Love for Engineering: Formula Trinity -->
         <div class="chapter">
             <div class="chapter-header">
-                <h2>Chapter 2: Skills in Practice</h2>
+                <h2>Chapter 2: Found My Love for Engineering</h2>
                 <button class="expand-btn">+</button>
             </div>
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <ul>
-                        <li><strong>FPGA Development</strong> - Designed and implemented complex digital systems using Verilog/VHDL</li>
-                        <li><strong>Embedded Systems</strong> - Built real-time systems with STM32, ESP32, and custom hardware</li>
-                        <li><strong>AI/ML Engineering</strong> - Developed computer vision models and trained custom LLMs</li>
-                        <li><strong>Signal Processing</strong> - Advanced DSP implementation for audio and sensor data</li>
+                        <li><strong>Formula Trinity Autonomous (2021)</strong> - Started my journey in autonomous racing, working on control systems, PID, MPC, and Pure Pursuit development</li>
+                        <li><strong>Control Department Lead (2022-23)</strong> - Led the control department, architecting the decision-making brain of our autonomous vehicle</li>
+                        <li><strong>Captain of FT AI (2024)</strong> - Became Captain, leading the entire autonomous systems team</li>
+                        <li><strong>Silverstone 2024</strong> - After 3 long years of struggle at FSUK, we completed our first lap at Silverstone. Won the award for Best Design and, the one I'm most proud of: Most Cones Knocked</li>
                     </ul>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>Each technology I learned was like adding a new tool to my toolbox. But the real skill was knowing when to use which tool. I learned that elegant solutions often come from understanding constraints deeply, not from using the fanciest tech.</p>
+                    <p>When I decided on engineering, it was the obvious choice given my interests. But I only truly fell in love with it when I joined Formula Trinity in 2021. This is one of the proudest achievements of my life—not just because we won awards, but because of the journey. Three years of failures, late nights, debugging, and rebuilding. When we finally completed that lap at Silverstone, I felt every second of those three years was worth it. I built everlasting relationships and friendships that I'll carry forever. The "Most Cones Knocked" award? That's our battle scar, our reminder that perfection isn't the goal—progress is.</p>
                 </div>
             </div>
         </div>
 
-        <!-- Chapter 3: Leading -->
+        <!-- Chapter 3: Early Research -->
         <div class="chapter">
             <div class="chapter-header">
-                <h2>Chapter 3: Leading</h2>
+                <h2>Chapter 3: Early Research</h2>
                 <button class="expand-btn">+</button>
             </div>
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <ul>
-                        <li><strong>Formula Trinity Racing - Electronics Team Lead</strong> (2023 - Present) - Leading a team designing custom PCBs and telemetry systems for Formula Student car</li>
-                        <li><strong>Team Mentorship</strong> - Mentored junior engineers in FPGA development and embedded systems</li>
-                        <li><strong>Project Coordination</strong> - Managed cross-functional collaboration between electronics, mechanical, and software teams</li>
+                        <li><strong>Laidlaw Research and Leadership Scholarship</strong> - Awarded the prestigious scholarship to conduct independent research</li>
+                        <li><strong>Research Focus</strong> - Under the supervision of Prof. Harun Siljak, investigated adaptive network systems and designed an adaptive model to control and stabilize complex networks with a minimal number of adaptive network nodes</li>
+                        <li><strong>Publications</strong> - Published research reflection and poster on the effectiveness of introducing adaptive controllable nodes to increase autonomy and synchronization in complex systems</li>
                     </ul>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>Leading taught me that great ideas mean nothing if you can't bring people along with you. I learned to listen more than I speak, to celebrate small wins, and that the best leaders make themselves obsolete by empowering others.</p>
+                    <p>Research taught me patience and humility. You can spend weeks on an idea only to prove it doesn't work—and that's progress too. Working with Prof. Siljak opened my eyes to the elegance of complex systems. The idea that you don't need to control everything to achieve stability—that a few strategic adaptive nodes can synchronize an entire network—felt almost philosophical. It changed how I think about control, not just in networks, but in life.</p>
                 </div>
             </div>
         </div>
 
-        <!-- Chapter 4: Professional -->
+        <!-- Chapter 4: Early Professional Experiences -->
         <div class="chapter">
             <div class="chapter-header">
-                <h2>Chapter 4: Professional</h2>
+                <h2>Chapter 4: Early Professional Experiences</h2>
                 <button class="expand-btn">+</button>
             </div>
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <ul>
-                        <li><strong>Research Experience</strong> - Conducted adaptive network systems research, contributing to cutting-edge networking solutions</li>
-                        <li><strong>Industry Collaboration</strong> - Worked on real-world projects bridging academic research and practical implementation</li>
-                        <li><strong>Technical Communication</strong> - Presented complex technical concepts to diverse audiences</li>
+                        <li><strong>Local Pub</strong> - Needed pocket money while studying full-time in Dublin. Quickly realized this was a job I couldn't handle and gained immense respect for those who do it every day</li>
+                        <li><strong>RampInfoTech Ltd - Part-Time Developer</strong> - Joined a startup providing digital transformation, automation, and AI tools to companies. Worked as a client-facing developer/Product Manager, understanding customer needs to design and implement efficiency tools</li>
+                        <li><strong>Container Tracking Automation</strong> - Developed a system that reduced 400+ hours of manual work, tracking 4000+ large shipments in real-time</li>
+                        <li><strong>Travel & Expense Management</strong> - Built an internal tool for managing employee travel and expenses</li>
+                        <li><strong>Skills Developed</strong> - Python, MS Power Tools (BI, Apps), SQL, API development and integration. Grew as both a software developer and product manager, learning effective communication and collaboration with larger onshore/offshore teams</li>
+                        <li><strong>Radiona.org, Zagreb Croatia</strong> - Traveled to work with this non-profit organization dedicated to enabling and connecting tech enthusiasts, hackers, and learners. Contributed to open-source FPGA development to reduce the digital divide in hardware engineering</li>
+                        <li><strong>ULX3S FPGA Project</strong> - Designed and verified digital logic in Verilog, adapted a self-trained super-resolution deep learning model to run on resource-constrained Lattice ECP5 FPGAs through simulation and synthesis</li>
+                        <li><strong>Educational Resources</strong> - Helped build accessible resources for first-time FPGA developers, enabling advanced computation on affordable, open hardware</li>
                     </ul>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>The professional world showed me that impact matters more than perfection. I learned to ship working solutions, iterate based on feedback, and that sometimes "good enough" is actually better than perfect if it arrives on time.</p>
+                    <p>That pub job humbled me fast. I thought I could handle anything—turns out I couldn't handle the chaos of a busy Dublin pub on a Friday night. Respect to everyone in hospitality. Moving to RampInfoTech was eye-opening. I wasn't just writing code anymore; I was solving real problems for real people. Seeing a tool I built save hundreds of hours made me understand the difference between code that works and code that matters. Then Croatia happened. Working at Radiona.org wasn't just about FPGAs—it was about democratizing technology. Coming from a software and robotics background, I'd seen how access determines who innovates. This project let me change that. Making powerful tools accessible and affordable? That's engineering with purpose.</p>
                 </div>
             </div>
         </div>
 
-        <!-- Chapter 5: Independent -->
+        <!-- Chapter 5: Getting Deeper into Cars: Jaguar Land Rover -->
         <div class="chapter">
             <div class="chapter-header">
-                <h2>Chapter 5: Independent</h2>
+                <h2>Chapter 5: Getting Deeper into Cars</h2>
                 <button class="expand-btn">+</button>
             </div>
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <ul>
-                        <li><strong>Self-Built Drone</strong> - Designed and constructed a custom drone from scratch with a friend, handling everything from flight controller programming to mechanical assembly</li>
-                        <li><strong>Personal Projects</strong> - Constantly building side projects to explore new technologies and challenge myself</li>
-                        <li><strong>Continuous Learning</strong> - Self-taught in areas beyond curriculum, from computer vision to game development</li>
+                        <li><strong>Jaguar Land Rover - Placement</strong> - Joined the Assisted and Autonomous Driving team, specifically the AI Onboard Perception team</li>
+                        <li><strong>Edge-Based R&D</strong> - Developed niche perception tools and features using onboard vehicle sensors. Daily routine included reading research papers, discussing and developing IPs/Patents, writing high-quality optimized code for data engineering, synthetic dataset generation, AI/ML model training and optimization</li>
+                        <li><strong>Multi-Sensor Fusion Visualization</strong> - Built a simulation tool to visualize large datasets with all sensors (camera, lidar, radar, ultrasonic) in one singular view for edge case identification, fault detection, labeling, and detection</li>
+                        <li><strong>ACES Challenge - Winner</strong> - In JLR's undergraduate competition, developed a mesh-based distributed network to connect high-security convoy vehicles for automated re-routing, threat detection, communication, and security. Built a simulated proof of concept and showcased a real-world vehicular demonstration. Won the competition and received the award for Most Innovative</li>
                     </ul>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>My independent projects are where I truly grow. There's no syllabus, no deadline except my own curiosity. Building that drone taught me more about systems thinking than any textbook could. These projects keep me grounded—they remind me why I fell in love with engineering in the first place.</p>
+                    <p>JLR was a real engineer's dream job. Being mentored by incredibly knowledgeable individuals who genuinely wanted to teach me was transformative. Every day felt like grad school, but applied. Reading cutting-edge papers in the morning, brainstorming novel solutions by afternoon, and writing production-grade code by evening. The ACES challenge win wasn't just about the award—it was validation that our crazy idea of a mesh network for convoy security actually worked. Building that demo, seeing actual vehicles communicate and re-route based on our system? That moment made everything real.</p>
                 </div>
             </div>
+        </div>
+
+        <!-- Chapter 6: Now -->
+        <div class="chapter">
+            <div class="chapter-header">
+                <h2>Chapter 6: Now</h2>
+                <button class="expand-btn">+</button>
+            </div>
+            <div class="chapter-content">
+                <div class="work-section">
+                    <h3>What I Did</h3>
+                    <ul>
+                        <li><strong>Final Year - Masters Year</strong> - Currently in my final year of Electronic & Computer Engineering at Trinity College Dublin</li>
+                        <li><strong>Thesis</strong> - Working on transistor parasitic model extraction for GaN FETs to improve device modeling accuracy</li>
+                        <li><strong>Coursework Project</strong> - Developing a Vision Transformer for a hybrid Quantum Deep Learning network</li>
+                    </ul>
+                </div>
+                <div class="genuine-section">
+                    <h3>Genuine Reflections</h3>
+                    <p>This is it—the culmination of everything I've learned. My thesis on GaN FET modeling combines my hardware passion with the precision I've developed over years of FPGA work. The quantum deep learning project? That's me pushing into the unknown again, just like I did at 13 with Python. The journey from building drones in my room to modeling transistors at the quantum level feels surreal. But it also feels right. This is where all those late nights, failed experiments, and small victories have led. And honestly? I can't wait to see where the next chapter takes me.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- References Section -->
+    <section class="references">
+        <div class="references-content">
+            <h2>References & Links</h2>
+            <ul>
+                <li><a href="https://laidlawscholars.network/documents/research-reflection-32b00ac2-0467-45e1-9366-a55925a6006c" target="_blank">Laidlaw Research Reflection - Adaptive Network Systems</a></li>
+                <li><a href="https://laidlawscholars.network/documents/investigation-of-the-effectiveness-of-introducing-a-few-adaptive-controllable-nodes-in-complex-systems-to-increase-autonomy-and-synchronization" target="_blank">Research Poster - Adaptive Controllable Nodes in Complex Systems</a></li>
+                <li><a href="https://www.rampinfotech.ie/" target="_blank">RampInfoTech Ltd - Digital Transformation & Automation</a></li>
+                <li><a href="https://laidlawscholars.network/posts/lia-blog-fpga-s-and-the-digital-divide" target="_blank">Blog - FPGAs and the Digital Divide</a></li>
+                <li><a href="https://laidlawscholars.network/documents/3-minute-thesis-fpgas-for-all" target="_blank">3-Minute Thesis - FPGAs for All</a></li>
+            </ul>
         </div>
     </section>
 
