--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Development Notice -->
+    <div class="dev-notice">
+        Website in development
+    </div>
+
     <!-- Navigation -->
     <nav class="main-nav">
         <a href="index.html" class="nav-link">Journey</a>
