Added personal notes

--- a/index.html
+++ b/index.html
@@ -40,13 +40,9 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <ul>
-                        <li><strong>Multicultural Roots</strong> - Grew up across multiple cities in India before moving to Ireland</li>
-                        <li><strong>Junior & Leaving Certificate</strong> - Achieved 613 points in my Leaving Certificate</li>
-                        <li><strong>Early Coding Journey</strong> - Started software development courses at age 13, building fun games and projects in Python and Java</li>
-                        <li><strong>First Hardware Project</strong> - Bought a cheap 3D printer with a friend from across the world, shipped to Ireland. Built a drone from scratch together</li>
-                        <li><strong>The Pivot</strong> - Initially thought I'd pursue mechanical engineering, but after building the drone, discovered my true passion lay in electronics</li>
-                    </ul>
+                    <p>Growing up across multiple cities in India before moving to Ireland gave me a unique perspective on life and learning. When I took the Leaving Certificate, I pushed myself hard and achieved 613 points—a score I was genuinely proud of. But what really mattered to me wasn't just the number; it was what I was building on the side.</p>
+                    <p>At 13, I started taking software development courses, not because anyone told me to, but because I was curious. I spent hours building games and experimenting with Python and Java, just for the fun of it. Then came the drone project. A friend from across the world and I decided to buy a cheap 3D printer, ship it to Ireland, and build a drone from scratch. We had no idea what we were doing, but we figured it out together.</p>
+                    <p>I initially thought I'd go into mechanical engineering—I loved the hands-on building. But as we assembled that drone, I realized something: I wasn't just interested in how things moved. I wanted to understand how they thought, how they made decisions. That's when I discovered electronics wasn't just a subject—it was where hardware met intelligence, and that became my path forward.</p>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
@@ -64,12 +60,9 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <ul>
-                        <li><strong>Formula Trinity Autonomous (2021)</strong> - Started my journey in autonomous racing, working on control systems, PID, MPC, and Pure Pursuit development</li>
-                        <li><strong>Control Department Lead (2022-23)</strong> - Led the control department, architecting the decision-making brain of our autonomous vehicle</li>
-                        <li><strong>Captain of FT AI (2024)</strong> - Became Captain, leading the entire autonomous systems team</li>
-                        <li><strong>Silverstone 2024</strong> - After 3 long years of struggle at FSUK, we completed our first lap at Silverstone. Won the award for Best Design and, the one I'm most proud of: Most Cones Knocked</li>
-                    </ul>
+                    <p>When I decided on engineering, it felt like the obvious choice given my interests. But choosing it and loving it are two different things. I only truly fell in love with engineering when I joined Formula Trinity Autonomous in 2021.</p>
+                    <p>I started working on control systems—PID controllers, Model Predictive Control (MPC), Pure Pursuit algorithms—the kind of stuff that makes an autonomous car actually drive. It was challenging, often frustrating, but incredibly rewarding. By 2022-23, I was leading the control department, essentially architecting the decision-making brain of our autonomous vehicle. Then in 2024, I became Captain of FT AI, leading the entire autonomous systems team.</p>
+                    <p>But here's the thing about Formula Student: it's not easy. We spent three long years struggling at FSUK competitions, facing failure after failure. And then, in 2024 at Silverstone, everything came together. We completed our first lap. We won the award for Best Design. And we won the award I'm most proud of: Most Cones Knocked. That last one might sound funny, but it represents every mistake, every iteration, every lesson learned the hard way.</p>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
@@ -90,11 +83,9 @@
                     <ul>
                         <li><strong>Laidlaw Research and Leadership Scholarship</strong> - Awarded the prestigious scholarship to conduct independent research</li>
                         <li><strong>Research Focus</strong> - Under the supervision of Prof. Harun Siljak, investigated adaptive network systems and designed an adaptive model to control and stabilize complex networks with a minimal number of adaptive network nodes</li>
-                        <li><strong>Publications</strong> - Published research reflection and poster on the effectiveness of introducing adaptive controllable nodes to increase autonomy and synchronization in complex systems</li>
-                    </ul>
-                </div>
-                <div class="genuine-section">
-                    <h3>Genuine Reflections</h3>
+                     p>Being awarded the Laidlaw Research and Leadership Scholarship was a turning point. It wasn't just an honor—it was an opportunity to pursue my own research ideas with the guidance of someone brilliant.</p>
+                    <p>I worked under the supervision of Prof. Harun Siljak, investigating adaptive network systems. The core question we explored was fascinating: Can you control and stabilize a complex network by introducing just a few adaptive, controllable nodes instead of trying to control everything? It's a bit like asking whether you can influence a crowd by strategically placing a few key people rather than trying to direct everyone.</p>
+                    <p>We designed adaptive models, ran simulations, and published our findings in research reflections and posters. The work showed that yes, you can increase both autonomy and synchronization in complex systems with minimal intervention. It was elegant, almost counterintuitive, and deeply satisfying to prove.</pGenuine Reflections</h3>
                     <p>Research taught me patience and humility. You can spend weeks on an idea only to prove it doesn't work—and that's progress too. Working with Prof. Siljak opened my eyes to the elegance of complex systems. The idea that you don't need to control everything to achieve stability—that a few strategic adaptive nodes can synchronize an entire network—felt almost philosophical. It changed how I think about control, not just in networks, but in life.</p>
                 </div>
             </div>
@@ -111,16 +102,10 @@
                     <h3>What I Did</h3>
                     <ul>
                         <li><strong>Local Pub</strong> - Needed pocket money while studying full-time in Dublin. Quickly realized this was a job I couldn't handle and gained immense respect for those who do it every day</li>
-                        <li><strong>RampInfoTech Ltd - Part-Time Developer</strong> - Joined a startup providing digital transformation, automation, and AI tools to companies. Worked as a client-facing developer/Product Manager, understanding customer needs to design and implement efficiency tools</li>
-                        <li><strong>Container Tracking Automation</strong> - Developed a system that reduced 400+ hours of manual work, tracking 4000+ large shipments in real-time</li>
-                        <li><strong>Travel & Expense Management</strong> - Built an internal tool for managing employee travel and expenses</li>
-                        <li><strong>Skills Developed</strong> - Python, MS Power Tools (BI, Apps), SQL, API development and integration. Grew as both a software developer and product manager, learning effective communication and collaboration with larger onshore/offshore teams</li>
-                        <li><strong>Radiona.org, Zagreb Croatia</strong> - Traveled to work with this non-profit organization dedicated to enabling and connecting tech enthusiasts, hackers, and learners. Contributed to open-source FPGA development to reduce the digital divide in hardware engineering</li>
-                        <li><strong>ULX3S FPGA Project</strong> - Designed and verified digital logic in Verilog, adapted a self-trained super-resolution deep learning model to run on resource-constrained Lattice ECP5 FPGAs through simulation and synthesis</li>
-                        <li><strong>Educational Resources</strong> - Helped build accessible resources for first-time FPGA developers, enabling advanced computation on affordable, open hardware</li>
-                    </ul>
-                </div>
-                <div class="genuine-section">
+                     p>Living and studying full-time in Dublin meant I needed some way to make pocket money. So naturally, I thought, "How hard can working at a pub be?" The answer: very hard. I quickly realized it was a job I couldn't handle. The pace, the chaos of a busy Friday night, the constant pressure—I gained immense respect for everyone in hospitality who does this every day.</p>
+                    <p>I then joined RampInfoTech Ltd, a startup providing digital transformation, automation, and AI tools to companies. I worked as a client-facing developer and product manager, which meant I wasn't just writing code—I was talking to customers, understanding their problems, and designing tools to make their lives more efficient. I built a Container Tracking Automation system that reduced over 400 hours of manual work, tracking 4000+ large shipments in real-time. I also developed a Travel and Expense Management tool for internal use. Along the way, I learned Python, MS Power Tools (Power BI, Power Apps), SQL, and API development. More importantly, I learned how to communicate effectively and collaborate with larger onshore and offshore teams.</p>
+                    <p>Then I traveled to Zagreb, Croatia to work with Radiona.org, a non-profit dedicated to enabling and connecting tech enthusiasts, hackers, and learners. I contributed to open-source FPGA development with the goal of reducing the digital divide in hardware engineering. Coming from a software and robotics background, I'd seen how access to powerful tools often determines who gets to innovate. This project gave me the opportunity to change that.</p>
+                    <p>I worked on the ULX3S low-cost FPGA board, designing and verifying digital logic in Verilog and adapting a self-trained super-resolution deep learning model to run on resource-constrained Lattice ECP5 FPGAs. Through simulation and synthesis, I learned how to translate algorithms into efficient hardware implementations. Beyond the technical work, I helped build accessible resources for first-time FPGA developers, enabling advanced computation on affordable, open hardware.</pss="genuine-section">
                     <h3>Genuine Reflections</h3>
                     <p>That pub job humbled me fast. I thought I could handle anything—turns out I couldn't handle the chaos of a busy Dublin pub on a Friday night. Respect to everyone in hospitality. Moving to RampInfoTech was eye-opening. I wasn't just writing code anymore; I was solving real problems for real people. Seeing a tool I built save hundreds of hours made me understand the difference between code that works and code that matters. Then Croatia happened. Working at Radiona.org wasn't just about FPGAs—it was about democratizing technology. Coming from a software and robotics background, I'd seen how access determines who innovates. This project let me change that. Making powerful tools accessible and affordable? That's engineering with purpose.</p>
                 </div>
@@ -144,12 +129,10 @@
                     </ul>
                 </div>
                 <div class="genuine-section">
-                    <h3>Genuine Reflections</h3>
-                    <p>JLR was a real engineer's dream job. Being mentored by incredibly knowledgeable individuals who genuinely wanted to teach me was transformative. Every day felt like grad school, but applied. Reading cutting-edge papers in the morning, brainstorming novel solutions by afternoon, and writing production-grade code by evening. The ACES challenge win wasn't just about the award—it was validation that our crazy idea of a mesh network for convoy security actually worked. Building that demo, seeing actual vehicles communicate and re-route based on our system? That moment made everything real.</p>
-                </div>
-            </div>
-        </div>
-
+                    <p>Starting my placement at Jaguar Land Rover felt like stepping into the future. I joined the Assisted and Autonomous Driving team, specifically working within the AI Onboard Perception group. This was edge-based R&D at its finest—we developed niche, innovative perception tools and features using the car's onboard sensors.</p>
+                    <p>My daily routine was unlike anything I'd experienced before. I'd start by reading cutting-edge research papers, then spend time discussing and developing intellectual property and patents with my team. The rest of the day involved writing high-quality, optimized code for data engineering, synthetic dataset generation, and AI/ML model training and optimization. I was mentored by incredibly knowledgeable individuals who genuinely wanted to teach me, and I learned so much from them.</p>
+                    <p>One of my main contributions was building a multi-sensor fusion visualization simulation tool. It allowed us to visualize massive datasets from all sensors—cameras, lidar, radar, and ultrasonic—in one unified view. This made it possible to identify edge cases, detect faults, and improve our labeling and detection systems.</p>
+                    <p>Then came the ACES Challenge, JLR's undergraduate competition. We were tasked with developing an innovative idea for vehicles. My team and I built a mesh-based distributed network to connect high-security convoy vehicles for automated re-routing, threat detection, communication, and security. We created a simulated proof of concept and showcased a real-world vehicular demonstration. We won the competition and were given the award for Most Innovative.</p
         <!-- Chapter 6: Now -->
         <div class="chapter">
             <div class="chapter-header">
@@ -167,11 +150,9 @@
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>This is it—the culmination of everything I've learned. My thesis on GaN FET modeling combines my hardware passion with the precision I've developed over years of FPGA work. The quantum deep learning project? That's me pushing into the unknown again, just like I did at 13 with Python. The journey from building drones in my room to modeling transistors at the quantum level feels surreal. But it also feels right. This is where all those late nights, failed experiments, and small victories have led. And honestly? I can't wait to see where the next chapter takes me.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+                    <p>I'm currently in my final year of Electronic & Computer Engineering at Trinity College Dublin—it's my Masters year, and it feels like everything I've learned is coming together.</p>
+                    <p>For my thesis, I'm working on transistor parasitic model extraction for GaN FETs (Gallium Nitride Field-Effect Transistors) to improve device modeling accuracy. It's highly specialized work that combines hardware design, simulation, and precision engineering—all the things I've grown passionate about over the years.</p>
+                    <p>Alongside my thesis, I'm also developing a Vision Transformer for a hybrid Quantum Deep Learning network as part of my coursework. It's cutting-edge, experimental, and honestly a bit intimidating—but that's what makes it exciting. I'm pushing into territory I don't fully understand yet, and that's exactly where I want to be.</p
 
     <!-- References Section -->
     <section class="references">
