Fixed 3d printer statement

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <p>I grew up across multiple cities in India before moving to Ireland, where I completed my Junior and Leaving Certificate. I achieved 613 points out of 625—a result I was genuinely happy with.</p>
-                    <p>At 13, I started taking software development courses and spent countless hours building games and projects in Python and Java. It was less about formal learning and more about exploration. Around the same time, a friend from across the world and I bought a cheap 3D printer, shipped it to Ireland, and decided to build a drone from scratch. The process was messy—things broke, we rebuilt, we learned as we went—but eventually, we got it flying.</p>
+                    <p>At 13, I started taking software development courses and spent countless hours building games and projects in Python and Java. It was less about formal learning and more about exploration. Around the same time, a friend and I bought a cheap 3D printer—he was visiting abroad and brought it back to Ireland—and decided to build a drone from scratch. The process was messy—things broke, we rebuilt, we learned as we went—but eventually, we got it flying.</p>
                     <p>I thought mechanical engineering would be my path. I loved the hands-on building. But through building that drone, I realized what really drew me in wasn't just the mechanics—it was the decision-making, the intelligence behind the movement. That's when electronics clicked for me.</p>
                 </div>
                 <div class="genuine-section">
